--- a/app/src/main/res/layout/activity_home_seller.xml
+++ b/app/src/main/res/layout/activity_home_seller.xml
@@ -13,13 +13,17 @@
         android:layout_height="wrap_content"
         android:text="Add Product"
         android:layout_marginBottom="50dp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:padding="15dp"
+        android:backgroundTint="@color/startColor"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"/>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="150dp"
         android:layout_marginBottom="98dp"
         android:scrollbars="none">
 
@@ -32,15 +36,24 @@
         </LinearLayout>
     </ScrollView>
 
+    <TextView
+        android:id="@+id/hello_there"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="93dp"
+        android:text="Manage Your Products Here!"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        android:textStyle="bold"/>
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:background="#e7820e"
         android:minHeight="?attr/actionBarSize"
+        android:padding="8dp"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,8 +61,8 @@
 
         <ImageView
             android:id="@+id/logo"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_gravity="start"
             android:contentDescription="@string/stop2go"
             android:src="@drawable/logo3"
@@ -59,21 +72,35 @@
             app:layout_constraintTop_toTopOf="@+id/menu_back" />
 
         <ImageButton
-            android:id="@+id/home_button"
-            android:layout_width="wrap_content"
+            android:id="@+id/account_button"
+            android:layout_width="55dp"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:backgroundTint="@color/Transparency"
-            android:contentDescription="@string/home"
-            android:src="@drawable/home_button"
+            android:contentDescription="@string/accounts"
+            android:src="@drawable/account_button"
             app:layout_constraintBottom_toBottomOf="@+id/menu_back"
-            app:layout_constraintEnd_toStartOf="@+id/orders_button"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
+            app:layout_constraintEnd_toEndOf="@+id/menu_back"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/my_orders_button"
             app:layout_constraintTop_toTopOf="@+id/menu_back" />
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/cart_button"-->
+<!--            android:layout_width="55dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="end"-->
+<!--            android:backgroundTint="@color/Transparency"-->
+<!--            android:contentDescription="@string/cart"-->
+<!--            android:src="@drawable/cart_button"-->
+<!--            app:layout_constraintBottom_toBottomOf="@+id/menu_back"-->
+<!--            app:layout_constraintEnd_toStartOf="@+id/my_orders_button"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/home_button"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/menu_back" />-->
 
         <ImageButton
             android:id="@+id/orders_button"
-            android:layout_width="wrap_content"
+            android:layout_width="55dp"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:backgroundTint="@color/Transparency"
@@ -85,17 +112,16 @@
             app:layout_constraintTop_toTopOf="@+id/menu_back" />
 
         <ImageButton
-            android:id="@+id/account_button"
-            android:layout_width="wrap_content"
+            android:id="@+id/home_button"
+            android:layout_width="55dp"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:backgroundTint="@color/Transparency"
-            android:contentDescription="@string/accounts"
-            android:src="@drawable/account_button"
+            android:contentDescription="@string/home"
+            android:src="@drawable/home_button"
             app:layout_constraintBottom_toBottomOf="@+id/menu_back"
-            app:layout_constraintEnd_toEndOf="@+id/menu_back"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/my_orders_button"
+            app:layout_constraintEnd_toStartOf="@+id/orders_button"
+            app:layout_constraintStart_toEndOf="@+id/textView2"
             app:layout_constraintTop_toTopOf="@+id/menu_back" />
 
     </androidx.appcompat.widget.Toolbar>
