--- a/app/src/main/res/layout/activity_item_preview.xml
+++ b/app/src/main/res/layout/activity_item_preview.xml
@@ -12,9 +12,10 @@
         android:id="@+id/product_name_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Product Name:"
+        android:text="Product"
         android:textColor="@color/white"
-        android:textSize="40dp"
+        android:textSize="35sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -28,30 +29,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Price: "
-        android:textColor="@color/endColor"
+        android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.162"
+        app:layout_constraintHorizontal_bias="0.106"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/quantityNumber"
-        app:layout_constraintVertical_bias="0.05" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.424" />
 
     <TextView
         android:id="@+id/priceNumber"
-        android:layout_width="25dp"
-        android:layout_height="42dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text=""
         android:textColor="@color/white"
-        android:textSize="25dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.142"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/price_text"
-        app:layout_constraintVertical_bias="0.077" />
+        app:layout_constraintVertical_bias="0.038" />
 
     <EditText
         android:id="@+id/quantity_label"
@@ -75,66 +76,36 @@
         app:layout_constraintTop_toBottomOf="@+id/product_name_label"
         app:layout_constraintVertical_bias="0.052" />
 
-    <TextView
-        android:id="@+id/quantity_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Quantity:"
-        android:textColor="@color/endColor"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.177"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/quantity_label"
-        app:layout_constraintVertical_bias="0.086" />
-
-    <TextView
-        android:id="@+id/quantityNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text=" "
-        android:textColor="@color/white"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.15"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/quantity_text"
-        app:layout_constraintVertical_bias="0.002" />
 
     <TextView
         android:id="@+id/description_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Description:"
-        android:textColor="@color/endColor"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/priceNumber"
-        app:layout_constraintVertical_bias="0.078" />
-
-    <TextView
-        android:id="@+id/descriptionStuff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" "
         android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.135"
+        app:layout_constraintHorizontal_bias="0.13"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/priceNumber"
+        app:layout_constraintVertical_bias="0.092" />
+
+    <TextView
+        android:id="@+id/descriptionStuff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.141"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description_text"
-        app:layout_constraintVertical_bias="0.097" />
+        app:layout_constraintVertical_bias="0.066" />
 
     <ImageButton
         android:id="@+id/back_button"
@@ -156,13 +127,15 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:background="@color/startColor"
+        android:padding="10dp"
         android:text="Add to Cart"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descriptionStuff"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.279" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
