--- a/app/src/main/res/layout/activity_orders_owner.xml
+++ b/app/src/main/res/layout/activity_orders_owner.xml
@@ -22,11 +22,9 @@
         android:id="@+id/toolbar5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:background="#e7820e"
         android:minHeight="?attr/actionBarSize"
+        android:padding="8dp"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,8 +32,8 @@
 
         <ImageView
             android:id="@+id/logo"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_gravity="start"
             android:contentDescription="@string/stop2go"
             android:src="@drawable/logo3"
@@ -45,34 +43,35 @@
             app:layout_constraintTop_toTopOf="@+id/menu_back" />
 
         <ImageButton
-            android:id="@+id/homeButton"
-            android:layout_width="wrap_content"
+            android:id="@+id/account_button"
+            android:layout_width="55dp"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:backgroundTint="@color/Transparency"
-            android:contentDescription="@string/home"
-            android:src="@drawable/home_button"
+            android:contentDescription="@string/accounts"
+            android:src="@drawable/account_button"
             app:layout_constraintBottom_toBottomOf="@+id/menu_back"
-            app:layout_constraintEnd_toStartOf="@+id/orders_button"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
+            app:layout_constraintEnd_toEndOf="@+id/menu_back"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/my_orders_button"
             app:layout_constraintTop_toTopOf="@+id/menu_back" />
 
-        <!--ImageButton
-            android:id="@+id/cart_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:backgroundTint="@color/Transparency"
-            android:contentDescription="@string/cart"
-            android:src="@drawable/cart_button"
-            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
-            app:layout_constraintEnd_toStartOf="@+id/my_orders_button"
-            app:layout_constraintStart_toEndOf="@+id/home_button"
-            app:layout_constraintTop_toTopOf="@+id/menu_back" /-->
+<!--        <ImageButton-->
+<!--            android:id="@+id/cart_button"-->
+<!--            android:layout_width="55dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="end"-->
+<!--            android:backgroundTint="@color/Transparency"-->
+<!--            android:contentDescription="@string/cart"-->
+<!--            android:src="@drawable/cart_button"-->
+<!--            app:layout_constraintBottom_toBottomOf="@+id/menu_back"-->
+<!--            app:layout_constraintEnd_toStartOf="@+id/my_orders_button"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/home_button"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/menu_back" />-->
 
         <ImageButton
-            android:id="@+id/ordersButton"
-            android:layout_width="wrap_content"
+            android:id="@+id/orders_button"
+            android:layout_width="55dp"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:backgroundTint="@color/Transparency"
@@ -84,17 +83,16 @@
             app:layout_constraintTop_toTopOf="@+id/menu_back" />
 
         <ImageButton
-            android:id="@+id/accountButton"
-            android:layout_width="wrap_content"
+            android:id="@+id/home_button"
+            android:layout_width="55dp"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:backgroundTint="@color/Transparency"
-            android:contentDescription="@string/accounts"
-            android:src="@drawable/account_button"
+            android:contentDescription="@string/home"
+            android:src="@drawable/home_button"
             app:layout_constraintBottom_toBottomOf="@+id/menu_back"
-            app:layout_constraintEnd_toEndOf="@+id/menu_back"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/my_orders_button"
+            app:layout_constraintEnd_toStartOf="@+id/orders_button"
+            app:layout_constraintStart_toEndOf="@+id/textView2"
             app:layout_constraintTop_toTopOf="@+id/menu_back" />
 
     </androidx.appcompat.widget.Toolbar>
