--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -110,7 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="64dp"
-        android:text="@string/username"
+        android:text="Username:"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -124,7 +124,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/email"
+        android:text="Email:"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -138,7 +138,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/password"
+        android:text="Password:"
         android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold"
