--- a/app/src/main/res/layout/activity_account_shopper.xml
+++ b/app/src/main/res/layout/activity_account_shopper.xml
@@ -109,7 +109,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="64dp"
-        android:text="@string/username"
+        android:text="Username:"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -123,7 +123,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/email"
+        android:text="Email:"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -137,7 +137,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/password"
+        android:text="Password:"
         android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold"
