--- a/app/src/main/res/layout/card2.xml
+++ b/app/src/main/res/layout/card2.xml
@@ -29,12 +29,12 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/endColor"
                     android:textStyle="bold"
-                    android:textSize="24sp" />
+                    android:textSize="20sp" />
 
                 <Button
                     android:id="@+id/go_to_store_button"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
                     android:layout_marginLeft="260dp"
                     android:background="@color/endColor"
                     android:text="Visit"
