--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="Transparency">#00ffffff</color>
     <color name="startColor">#FDB601</color>
     <color name="centerColor">#ee531f</color>
+    <color name="orange">#ff5f5f</color>
     <color name="endColor">#9B0455</color>
 </resources>
